Sat Feb 21 20:06:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ServerActivator_Impl.cpp
        * examples/Display/GPS/GPS_exec.cpp
        * examples/Hello/Sender/Sender_exec.cpp
        * examples/Swapping/Sender/Sender_exec.cpp
        * tests/CIAO_ComponentServer/SimpleComponent/client.cpp
          Updated debug statements

        * examples/Hello/descriptors/DeploymentPlan.cdp
          Reverted accident checkin

Sat Feb 21 19:53:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_Container_Impl.cpp:
        * ciao/Containers/Session/Session_Container.cpp:
          Small improvements to debug statements and nil usage

        * DAnCE/TargetManager/descriptors/run_test_TargetManager.pl
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl
        * DAnCE/tests/CIAO/NodeManager-Deployments/run_test.pl
        * DAnCE/tests/scripts/BasicSP/basicNodeDaemon.pl
        * docs/tutorials/Quoter/Simple/descriptors/runNodeDaemons.pl
        * examples/BasicSP/descriptors/run_test.pl
        * examples/Display/descriptors/basicNodeDaemon.pl
        * examples/Display/descriptors/run_NodeDaemons.pl
        * examples/Display/descriptors/run_test_without_ns.pl
        * examples/Hello/descriptors/DeploymentPlan.cdp
        * examples/Hello/descriptors/run_NodeDaemons.pl
        * examples/Hello/descriptors/run_test.pl
        * examples/Hello/descriptors/run_test_without_ns.pl
        * examples/Hello/descriptors_RTCCM/rt_run_test.pl
        * examples/Null_Component/descriptors/run_test.pl
        * tests/Bug_2130_Regression/descriptors/run_test.pl
          Use DANCE_ROOT and dance_node_manager

Fri Feb 20 14:49:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM.mpc
        * ccm/ComponentServer/CCM_ComponentServer.mpc
        * ciao/ComponentServer/CIAO_ComponentServer.mpc
        * ciao/Contexts/Context.mpc
        * ciao/Servants/Servants.mpc