@@ -36,7 +36,8 @@ project(Hello_Receiver_stub) : ccm_stub {
   avoids += ace_for_tao
   after += Hello_Receiver_idl_gen Hello_Base_stub
   libs  += Hello_Base_stub
-  libpaths += ../Hello_Base
+  libout = ../lib
+  libpaths += ../lib
 
   sharedname = Hello_Receiver_stub
   dynamicflags   = RECEIVER_STUB_BUILD_DLL
@@ -63,7 +64,8 @@ project(Hello_Receiver_exec) : ciao_executor {
   after   += Hello_Receiver_cidl_gen Hello_Receiver_stub
   sharedname = Hello_Receiver_exec
   libs += Hello_Receiver_stub Hello_Base_stub
-  libpaths += ../Hello_Base
+  libout = ../lib
+  libpaths += ../lib
 
   dynamicflags   = RECEIVER_EXEC_BUILD_DLL
 
@@ -95,7 +97,8 @@ project(Hello_Receiver_svnt) : ciao_servant {
                 Hello_Receiver_stub \
                 Hello_Base_skel \
                 Hello_Base_stub
-  libpaths += ../Hello_Base
+  libout = ../lib
+  libpaths += ../lib
 
   dynamicflags = RECEIVER_SVNT_BUILD_DLL
 
