@@ -36,7 +36,8 @@ project(Hello_Sender_stub) : ccm_stub {
   avoids += ace_for_tao
   after += Hello_Sender_idl_gen Hello_Base_stub
   libs  += Hello_Base_stub
-  libpaths += ../Hello_Base
+  libout = ../lib
+  libpaths += ../lib
 
   sharedname = Hello_Sender_stub
   dynamicflags   = SENDER_STUB_BUILD_DLL
@@ -63,7 +64,8 @@ project(Hello_Sender_exec) : ciao_executor {
   after   += Hello_Sender_cidl_gen Hello_Sender_stub
   sharedname = Hello_Sender_exec
   libs += Hello_Sender_stub Hello_Base_stub
-  libpaths += ../Hello_Base
+  libout = ../lib
+  libpaths += ../lib
 
   dynamicflags   = SENDER_EXEC_BUILD_DLL
 
@@ -95,7 +97,8 @@ project(Hello_Sender_svnt) : ciao_servant {
                 Hello_Sender_stub \
                 Hello_Base_skel \
                 Hello_Base_stub
-  libpaths += ../Hello_Base
+  libout = ../lib
+  libpaths += ../lib
 
   dynamicflags = SENDER_SVNT_BUILD_DLL
 
@@ -126,7 +129,8 @@ project (Hello_starter) : ccm_stub, valuetype {
   exename = starter
   after += Hello_Sender_stub
   libs  += Hello_Sender_stub Hello_Base_stub
-  libpaths += ../Hello_Base
+  libout = ../lib
+  libpaths += ../lib
 
   IDL_Files {
   }
